cleanup showcase for IOptions in both Configuration + consumer + lib post validation

--- a/IOptionsFromLibs.Consumer/appsettings.Development.json
+++ b/IOptionsFromLibs.Consumer/appsettings.Development.json
@@ -5,5 +5,13 @@
       "System": "Warning",
       "Microsoft": "Warning"
     }
+  },
+
+  "MyLib": {
+    "ModuleA": {
+      "x": "Value x from appsettings.Development.json",
+      "y": "Value y from appsettings.Development.json",
+      "z": "Value z from appsettings.Development.json"
+    }
   }
 }
