--- a/IOptionsFromLibs.Consumer/appsettings.json
+++ b/IOptionsFromLibs.Consumer/appsettings.json
@@ -4,5 +4,14 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "MyLib": {
+    "ModuleA": {
+      "w": "Value w from appsettings.json",
+      "x": "Value x from appsettings.json",
+      "y": "Value y from appsettings.json",
+      "z": "Value z from appsettings.json"
+    }
+  }
 }
