Explicit the idea behind PostConfigure by defaulting Z if the provided value is negative

--- a/IOptionsFromLibs.Consumer/appsettings.Development.json
+++ b/IOptionsFromLibs.Consumer/appsettings.Development.json
@@ -10,8 +10,7 @@
   "MyLib": {
     "ModuleA": {
       "x": "Value x from appsettings.Development.json",
-      "y": "Value y from appsettings.Development.json",
-      "z": "Value z from appsettings.Development.json"
+      "y": "Value y from appsettings.Development.json"
     }
   }
 }
