--- a/IOptionsFromLibs.Consumer/appsettings.json
+++ b/IOptionsFromLibs.Consumer/appsettings.json
@@ -10,8 +10,7 @@
     "ModuleA": {
       "w": "Value w from appsettings.json",
       "x": "Value x from appsettings.json",
-      "y": "Value y from appsettings.json",
-      "z": "Value z from appsettings.json"
+      "y": "Value y from appsettings.json"
     }
   }
 }
