--- a/IOptionsFromLibs.Consumer/IOptionsFromLibs.Consumer.csproj
+++ b/IOptionsFromLibs.Consumer/IOptionsFromLibs.Consumer.csproj
@@ -1,16 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\IOptionsFromLibs.Lib\IOptionsFromLibs.Lib.csproj" />
