--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,33 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/IOptionsFromLibs.Consumer/IOptionsFromLibs.Consumer.csproj"
+                "${workspaceFolder}/IOptionsFromLibs.sln",
+                "/property:GenerateFullPaths=true",
+                "/consoleloggerparameters:NoSummary;ForceNoAlign"
+            ],
+            "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "publish",
+            "command": "dotnet",
+            "type": "process",
+            "args": [
+                "publish",
+                "${workspaceFolder}/IOptionsFromLibs.sln",
+                "/property:GenerateFullPaths=true",
+                "/consoleloggerparameters:NoSummary;ForceNoAlign"
+            ],
+            "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "watch",
+            "command": "dotnet",
+            "type": "process",
+            "args": [
+                "watch",
+                "run",
+                "--project",
+                "${workspaceFolder}/IOptionsFromLibs.sln"
             ],
             "problemMatcher": "$msCompile"
         }
