--- a/IOptionsFromLibs.Consumer/IOptionsFromLibs.Consumer.csproj
+++ b/IOptionsFromLibs.Consumer/IOptionsFromLibs.Consumer.csproj
@@ -1,11 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\IOptionsFromLibs.Lib\IOptionsFromLibs.Lib.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.*" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.*" />
+
+    <ProjectReference Include="..\IOptionsFromLibs.Library\IOptionsFromLibs.Library.csproj" />
   </ItemGroup>
 
 </Project>
